--- a/output/hiur-lemmas-by-size-ul.html
+++ b/output/hiur-lemmas-by-size-ul.html
@@ -6038,6 +6038,8 @@
 <ul><li>مقبول मक़बूल maqbuul 1</li>
 </ul><p><b>آب و گل आब‐ओ‐गिल aab-o-gil 1</b></p>
 <ul><li>آب و گل आब‐ओ‐गिल aab-o-gil 1</li>
+</ul><p><b>علیٰ ال رغم अला-अल-रग़्म ((al;aa-al-ra;gm 1</b></p>
+<ul><li>علیٰ ال رغمِ अला-अल-रग़्म‐ए‐ ((al;aa-al-ra;gm-e 1</li>
 </ul><p><b>بہائی बहाई bahaa))ii 1</b></p>
 <ul><li>بہائی बहाई bahaa))ii 1</li>
 </ul><p><b>شرع शर् shar(( 1</b></p>
